New Fork for personal use

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name: Giggajob
-Theme URI: https://genexmarketing.com/themes/giggajob
+Theme URI: https://lancesmith.cc
 Description: A modern employment WordPress theme for job listings and resume management
 Version: 1.0.0
 Requires at least: 5.9
 Tested up to: 6.4
 Requires PHP: 7.4
-Author: Genex Marketing Agency Ltd.
-Author URI: https://genexmarketing.com
+Author: Lance Smith
+Author URI: https://lancesmith.cc
 Text Domain: giggajob
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
